# SQLAlchemy-SQL-Em_Python

./: README.md  exemplo_01.py  meubanco.db  pyproject.toml
