[tool.poetry]
name = "aula17"
version = "0.1.0"
description = "Descrição do projeto"
authors = ["Michael Oliveira Ribeiro <michaeloliveira38@gmail.com>"]
readme = "README.md"
package-mode = false  # Desativa o modo de pacote, já que não há pasta aula17

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"